@@ -1,5 +1,6 @@
 Changes for 1.0.10
 
+ - [NTD-48] added support of system.swap.size under FreeBSD (Sasha)
  - [ZBX-623] fixed incorrect processing of function abschange() for integers (Sasha)
 
 Changes for 1.0.9
